# cmake-demo

./: README.md
Demo01/: CMakeLists.txt  main.cpp
Demo02/: CMakeLists.txt  log.h  main.cpp
Demo03/: CMakeLists.txt  main.cpp
Demo04/: CMakeLists.txt
Demo04/log/: CMakeLists.txt  log.cpp
Demo05/: CMakeLists.txt  config.h  config.h.in  main.cpp
Demo05/include/: log.h
Demo05/log/: CMakeLists.txt
Demo07/: CMakeLists.txt  config.h  config.h.in  main.cpp
